4.3 part 2 - displaying local versions - many updates/optimizations: - launch tab (main page) - about page (fetches browser) - settings page (removed "installation found" and min ram)