@@ -5,7 +5,13 @@ import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.FileOutputStream;
 import java.io.IOException;
+import java.io.OutputStream;
+import java.io.PrintStream;
 import java.net.URL;
+import java.util.Enumeration;
+import java.util.logging.Logger;
+import java.util.zip.ZipEntry;
+import java.util.zip.ZipFile;
 
 import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
@@ -17,52 +23,61 @@ import org.w3c.dom.Node;
 import org.w3c.dom.NodeList;
 import org.xml.sax.SAXException;
 
+import com.creatifcubed.simpleapi.SimpleAggregateOutputStream;
 import com.creatifcubed.simpleapi.SimpleOS;
 import com.creatifcubed.simpleapi.SimpleUtils;
 import com.mineshaftersquared.models.MCLibrary;
 import com.mineshaftersquared.models.MCVersion;
-
-import java.util.Enumeration;
-import java.util.logging.Logger;
-import java.util.zip.ZipEntry;
-import java.util.zip.ZipFile;
 
 public class MCDownloader {
 
 	public static final String LIBS_BASE_URL = "https://s3.amazonaws.com/Minecraft.Download/libraries/";
 	public static final String JAR_URL_TEMPLATE = "https://s3.amazonaws.com/Minecraft.Download/versions/%1$s/%1$s.jar";
 	public static final String RESOURCES_URL = "https://s3.amazonaws.com/Minecraft.Resources/";
-	private static final Logger log = Logger.getLogger(MCDownloader.class.getCanonicalName());
+	public final SimpleAggregateOutputStream aggregate;
+	private final PrintStream out;
+
+	public MCDownloader() {
+		this.aggregate = new SimpleAggregateOutputStream(System.out);
+		this.out = new PrintStream(this.aggregate);
+	}
 
 	/**
-	 * Downloads:
-	 * - version json file
-	 * - version jar
-	 * - version natives
+	 * Downloads: - version json file - version jar - version natives
 	 * 
-	 * - required libraries
-	 * - resources if needed
+	 * - required libraries - resources if needed
+	 * 
 	 * @param version
 	 */
-	public static void downloadVersion(MCVersion version, File base) {
-		downloadBasics(version, base);
-		downloadGenerics(version, base);
+	public boolean downloadVersion(MCVersion version, File base) {
+		this.out.println("There are 4 steps to a download: the version-specific files, the libraries, unpacking the natives, resources/assets");
+		return this.downloadBasics(version, base) && this.downloadGenerics(version, base);
 	}
-	private static void downloadBasics(MCVersion version, File base) {
+
+	private boolean downloadBasics(MCVersion version, File base) {
 		// Download json, jar
 		File parent = new File(base, "versions/" + version.versionId);
 		parent.mkdirs();
 		try {
 			File infoFile = new File(parent, version.versionId + ".json");
-			log.info("Downloading version " + version.versionId + " ... Info at " + infoFile.toURI().toURL().toString());
-			SimpleUtils.filePutContents(infoFile, MCVersion.getMCVersionData(version.versionId, MCVersion.VERSION_INFO_URL_TEMPLATE, false));
-			SimpleUtils.downloadFile(new URL(String.format(JAR_URL_TEMPLATE, version.versionId)), new File(parent, version.versionId + ".jar").getCanonicalPath(), 1 << 24);
+			this.out.println("Downloading version " + version.versionId + " ... Info at "
+					+ infoFile.toURI().toURL().toString());
+			SimpleUtils.filePutContents(infoFile,
+					MCVersion.getMCVersionData(version.versionId, MCVersion.VERSION_INFO_URL_TEMPLATE, false));
+			SimpleUtils.downloadFile(new URL(String.format(JAR_URL_TEMPLATE, version.versionId)), new File(parent,
+					version.versionId + ".jar").getCanonicalPath(), 1 << 24);
+			this.out.println("Done downloading version specific files.");
+			return true;
 		} catch (IOException ex) {
 			ex.printStackTrace();
 		}
+		this.out.println("Failed to download version specific files. You should delete this installation and try again.");
+		return false;
 	}
-	private static void downloadGenerics(MCVersion version, File base) {
+
+	private boolean downloadGenerics(MCVersion version, File base) {
 		try {
+			this.out.println("Downloading libraries...");
 			SimpleOS os = SimpleOS.getOS();
 			MCLibrary[] libs = version.getLibrariesForOS(os);
 			File parent = new File(base, "libraries");
@@ -70,24 +85,35 @@ public class MCDownloader {
 			for (int i = 0; i < libs.length; i++) {
 				String uri = libs[i].getDownloadName(os);
 				File f = new File(parent, uri);
-				f.getParentFile().mkdirs();
-				SimpleUtils.downloadFile(new URL(LIBS_BASE_URL + uri), f.getCanonicalPath(), 1 << 24);
+				if (f.exists()) {
+					this.out.println(String.format("Library at %s already exists, skipping", f.getCanonicalPath()));
+				} else {
+					this.out.println(String.format("Downloading library %s ...", libs[i].name));
+					f.getParentFile().mkdirs();
+					SimpleUtils.downloadFile(new URL(LIBS_BASE_URL + uri), f.getCanonicalPath(), 1 << 24);
+				}
 			}
-			unpackNatives(version, base);
+			if (!this.unpackNatives(version, base)) {
+				return false;
+			}
+			this.out.println("Done downloading libraries.");
 		} catch (IOException ex) {
 			ex.printStackTrace();
+			this.out.println("Something went wrong downloading the libraries. You should delete this installation and try again");
+			return false;
 		}
 		File resourcesBase = new File(base, "assets");
-		if (!resourcesBase.exists()) {
-			downloadResources(version, resourcesBase);
-		}
+		return this.downloadResources(version, resourcesBase);
 	}
-	private static void unpackNatives(MCVersion version, File base) {
+
+	private boolean unpackNatives(MCVersion version, File base) {
 		try {
+			this.out.println("Unpacking natives...");
 			SimpleOS os = SimpleOS.getOS();
 			MCLibrary[] libs = version.getLibrariesForOS(os);
 			File parent = new File(base, "versions/" + version.versionId);
-			File nativesDir = new File(parent, version.versionId + "-natives"); // add System.nanoTime()?
+			File nativesDir = new File(parent, version.versionId + "-natives"); // add
+																				// System.nanoTime()?
 			nativesDir.mkdirs();
 			for (int i = 0; i < libs.length; i++) {
 				String nativesName = libs[i].getNatives().get(os);
@@ -131,43 +157,20 @@ public class MCDownloader {
 					zip.close();
 				}
 			}
+			this.out.println("Done unpacking natives.");
+			return true;
 		} catch (FileNotFoundException ex) {
 			ex.printStackTrace();
 		} catch (IOException ex) {
 			ex.printStackTrace();
 		}
-		/*
-              File targetFile = new File(targetDir, entry.getName());
-              if (targetFile.getParentFile() != null) targetFile.getParentFile().mkdirs();
-
-              if (!entry.isDirectory()) {
-                BufferedInputStream inputStream = new BufferedInputStream(zip.getInputStream(entry));
-
-                byte[] buffer = new byte[2048];
-                FileOutputStream outputStream = new FileOutputStream(targetFile);
-                BufferedOutputStream bufferedOutputStream = new BufferedOutputStream(outputStream);
-                try
-                {
-                  int length;
-                  while ((length = inputStream.read(buffer, 0, buffer.length)) != -1)
-                    bufferedOutputStream.write(buffer, 0, length);
-                }
-                finally {
-                  Downloadable.closeSilently(bufferedOutputStream);
-                  Downloadable.closeSilently(outputStream);
-                  Downloadable.closeSilently(inputStream);
-                }
-              }
-            }
-          }
-        } finally { zip.close(); }
-      }
-    }
-  }
-		 */
+		this.out.println("Something went wrong unpacking the natives. You should delete this installation and try again.");
+		return false;
 	}
-	private static void downloadResources(MCVersion version, File resourcesBase) {
+
+	private boolean downloadResources(MCVersion version, File resourcesBase) {
 		try {
+			this.out.println("Downloading resources...");
 			resourcesBase.mkdirs();
 			DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance();
 			DocumentBuilder builder = factory.newDocumentBuilder();
@@ -180,17 +183,34 @@ public class MCDownloader {
 				if (node.getNodeType() == Node.ELEMENT_NODE) {
 					Element element = (Element) node;
 					String key = element.getElementsByTagName("Key").item(0).getChildNodes().item(0).getNodeValue();
-					String etag = element.getElementsByTagName("ETag") != null ? element.getElementsByTagName("ETag").item(0).getChildNodes().item(0).getNodeValue() : "-";
-					long size = Long.parseLong(element.getElementsByTagName("Size").item(0).getChildNodes().item(0).getNodeValue());
+					// String etag = element.getElementsByTagName("ETag") !=
+					// null ?
+					// element.getElementsByTagName("ETag").item(0).getChildNodes().item(0).getNodeValue()
+					// : "-";
+					long size = Long.parseLong(element.getElementsByTagName("Size").item(0).getChildNodes().item(0)
+							.getNodeValue());
 
 					if (size > 0) {
 						File file = new File(resourcesBase, key);
+						if (file.exists()) {
+							if (file.length() == size) {
+								this.out.println(String.format("Resource %s already exists and has the same size (skipping)", key));
+								continue;
+							} else {
+								this.out.println(String.format("Resource %s exists, but does not have the same size %d. Redownloading...", key, size));
+							}
+						} else {
+							this.out.println(String.format("Downloading resource %s ...", key));
+						}
 						// check etag length
 						file.getParentFile().mkdirs();
 						try {
 							SimpleUtils.downloadFile(new URL(RESOURCES_URL + key), file.getCanonicalPath(), 1 << 24);
 							if (file.length() != size) {
-								throw new IOException(String.format("Error downloading asset %s, downloaded size %d does not match expected size %d", key, file.length(), size));
+								throw new IOException(
+										String.format(
+												"Error downloading asset %s, downloaded size %d does not match expected size %d",
+												key, file.length(), size));
 							}
 						} catch (IOException ex) {
 							ex.printStackTrace();
@@ -198,6 +218,8 @@ public class MCDownloader {
 					}
 				}
 			}
+			this.out.println("Done downloading resources.");
+			return true;
 		} catch (IOException ex) {
 			ex.printStackTrace();
 		} catch (SAXException ex) {
@@ -205,5 +227,7 @@ public class MCDownloader {
 		} catch (ParserConfigurationException ex) {
 			ex.printStackTrace();
 		}
+		this.out.println("There was an error downloading resources. You should delete this installation and try again");
+		return false;
 	}
 }
